# qt4-qt5-convert

./: CMakeLists.txt  LICENSE  NamespaceResolver.cpp  README.md  TypeMatchers.cpp  TypeMatchers.h  main.cpp
src/: CMakeLists.txt  ContextMatchers.cpp  ContextMatchers.h  CustomPrinter.cpp  CustomPrinter.h  FunctionMatcher.cpp  FunctionMatcher.h  MethodMatcher.cpp  MethodMatcher.h  NamespaceResolver.h  QtConvertAction.cpp  QtConvertAction.h  QtConvertConsumer.cpp  QtConvertConsumer.h  QtConvertVisitor.cpp  QtConvertVisitor.h  TypeMatchers.cpp  TypeMatchers.h  main.cpp
